# pdfa_sketch

./: .gitignore  .ocamlformat  .ocamlinit  GNUmakefile  activate-hooks  dune-project  pdfaer.opam  process_verapdf.py
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.topmod/lib/lib.ml/: lib.cmi  lib.cmo  lib__.cmi  lib__Outintent.cmi
_build/default/lib/: lib__.ml-gen  utility.ml
_build/default/lib/.lib.objs/: lib.impl.all-deps  lib.impl.d  lib__Outintent.impl.d  lib__Packet.impl.d  lib__Utility.impl.d
_build/default/lib/.lib.objs/byte/: lib__.cmo  lib__.cmt  lib__Outintent.cmo  lib__Outintent.cmt  lib__Packet.cmi  lib__Packet.cmo  lib__Packet.cmt  lib__Utility.cmi  lib__Utility.cmo  lib__Utility.cmt
_build/default/lib/.merlin-conf/: lib-lib
app/: dune  pdfaer.ml
lib/: dune  fonts.ml  lib.ml  outintent.ml  packet.ml
matt_notes/: matt_notes.org
test/: dune  test_pdfaer.ml
test/cram-tests/: example.t
testing/tests/: __main__.py  exec_tools.py  filescript.py  filter_verapdf.py
write-up/: writeup.aux  writeup.fdb_latexmk  writeup.fls  writeup.out  writeup.tex  writeup.toc
